Switch to Java 7